# affected

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: config.rs  graph.rs  lib.rs  main.rs  project.rs  projects.rs  reports.rs  tasks.rs  ts.rs  utils.rs  workspace.rs
src/node/: mod.rs  node_project.rs
src/nx/: mod.rs  nx_project.rs
src/ts/: mod.rs  resolver.rs  ts.rs
