[package]
name = "affected"
authors = ["Denys Vuika <denys.vuika@gmail.com>"]
description = "A tool to find affected files or projects in a git repository"
repository = "https://github.com/DenysVuika/affected.git"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["git", "monorepo", "affected", "commits", "repository"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
git2 = "0.19.0"