[package]
name = "affected"
authors = ["Denys Vuika <denys.vuika@gmail.com>"]
description = "A tool to find affected files or projects in a git repository and run commands on them."
repository = "https://github.com/DenysVuika/affected.git"
license = "Apache-2.0"
version = "0.1.8"
edition = "2021"
keywords = ["git", "monorepo", "affected", "commits", "repository"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
dotenvy = "0.15"
git2 = "0.19.0"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4"
env_logger = "0.11.5"
ignore = "0.4.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
serde_with = "3.11.0"
tokio = { version = "1", features = ["full"] }
petgraph = "0.6.5"
globset = "0.4.15"
swc_common = "4.0.1"
swc_ecma_parser = "5.0.0"
swc_ecma_ast = "4.0.1"
tabled = "0.17.0"
